新增仓库地址

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <option value="zh">中文</option>
           <option value="en">English</option>
         </select>
+        <a href="https://github.com/Gigass/Video-Matting-to-SVG" target="_blank" rel="noopener noreferrer" class="btn" data-i18n="repoLink">GitHub 仓库</a>
       </div>
     </header>
 
