增加序列帧

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
           <div class="actions-row">
             <button id="exportSvgAnimBtn" disabled data-i18n="startExport">开始导出 SVG</button>
+            <button id="exportSpritesheetBtn" disabled data-i18n="exportSpritesheet">导出 Spritesheet</button>
             <button id="cancelSvgExportBtn" disabled class="btn-ghost" data-i18n="cancelExport">取消</button>
           </div>
           <div class="progress" id="progress" aria-label="导出进度" data-i18n-aria="progressLabel">
